--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         *{
-            background-color: black;
+            background-color: white;
         }
     </style>
     <script>
@@ -14,5 +14,6 @@
     </script>
 </head>
 <body>
+    <h1 style="color: white;">..</h1>
 </body>
 </html>
